# E2ETestMAF

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.ja.md  README.md  SECURITY.md  docker-compose.kvm.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: hyperlight-rampart.yml
agents/: browser.yaml  discovery.yaml  generator.yaml  judge.yaml  safety.yaml
doc/: E2ETestMAF_codex_modification_instructions_v2.md
docs/: E2ETestMAF_implementation_status.md  E2ETestMAF_requirements.md  artifacts.md  cli.md  configuration.md  deployment.md  development.md  migration.md  security.md
infra/: main.bicep  main.bicepparam.example  openai-rbac.bicep
scripts/: e2e-compose  qa-compose
skills/sample-app/: SKILL.md
skills/sample-app/references/: components.md
src/maf_e2e/: __init__.py  __main__.py  agent_config.py  agents.py  approval_store.py  artifacts.py  asset_store.py  authoring_workflow.py  cli.py  cli_agents.py  code_validation.py  codeact.py  config.py  devui.py  executors.py  failure_analysis.py  github_repair.py  middleware.py  models.py  playwright_codegen.py  process.py  provider_backend.py  publisher.py  rampart_adapter.py  regression_analysis_workflow.py  regression_runner.py  repair.py  runtime.py  telemetry.py  trial_runner.py  workflow.py
src/maf_e2e/domain/: __init__.py  approval.py  assets.py  failures.py  hashing.py  regression.py  repair.py  requests.py  specification.py
src/maf_qa/: __init__.py  __main__.py  agent_config.py  agents.py  cli.py  codeact.py  config.py  devui.py  executors.py  middleware.py  models.py  prompts.py  rampart_adapter.py  runtime.py  telemetry.py  workflow.py
templates/github-actions/: e2e-nightly.yml
tests/: regression_helpers.py  test_agent_config.py  test_asset_approval_publish.py  test_authoring_workflow.py  test_cli.py  test_cli_agents.py  test_codeact.py  test_config.py  test_deployment_templates.py  test_github_repair.py  test_hyperlight_integration.py  test_models.py  test_operations.py  test_playwright_codegen.py  test_regression_analysis_workflow.py  test_repair.py  test_resilience.py  test_runners_and_analysis.py  test_runtime.py  test_specification_models.py  test_subscription_cli_integration.py  test_workflow.py
tests/fixtures/webapp/: index.html
tests/rampart/: conftest.py  test_safety.py
tests/rampart/fixture/: index.html
