[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "maf-playwright-qa"
version = "0.1.0"
description = "Autonomous web QA workflow built with Microsoft Agent Framework and Playwright MCP"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "agent-framework-core==1.8.1",
  "agent-framework-declarative==1.0.0b260528",
  "agent-framework-gemini==1.0.0a260609",
  "agent-framework-openai==1.8.1",
  "aiohttp>=3.13,<4",
  "azure-identity>=1.25,<2",
  "azure-storage-blob>=12.30,<13",
  "mcp>=1.24,<2",
  "opentelemetry-exporter-otlp>=1.42,<2",
  "opentelemetry-sdk>=1.42,<2",
  "pydantic-settings>=2.14,<3",
]

[project.optional-dependencies]
azure-monitor = ["azure-monitor-opentelemetry-exporter>=1.0.0b45"]
devui = ["agent-framework-devui==1.0.0b260528"]

[dependency-groups]
dev = [
  "mypy>=2.1,<3",
  "pytest>=9,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<0.16",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
maf-qa = "maf_qa.cli:main"
maf-qa-devui = "maf_qa.devui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maf_qa"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "maf_qa/agent_definitions"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["maf_qa"]

[[tool.mypy.overrides]]
module = ["azure.monitor.*"]
ignore_missing_imports = true
